bundled_metadata/force-app/main/default/objects/Search_Strategy_Step__c/Search_Strategy_Step__c.object-meta.xml
<CustomObject>
    <label>Search Strategy Step</label>
    <nameField>
        <label>Search Strategy Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search Strategy Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>