bundled_metadata/force-app/main/default/objects/Search_Strategy_Step__c/fields/Associated_Account__c.field-meta.xml
<CustomField>
    <fullName>Associated_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Search Strategy Steps</relationshipLabel>
    <relationshipName>Search_Strategy_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>