bundled_metadata/force-app/main/default/objects/Search_Strategy_Step__c/fields/isExclusive__c.field-meta.xml
<CustomField>
    <fullName>isExclusive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclusive</label>
    <type>Checkbox</type>
</CustomField>