bundled_metadata/force-app/main/default/objects/Search_Strategy_Step__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>