bundled_metadata/force-app/main/default/objects/Search_Strategy_Step__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Search Strategy Steps</relationshipLabel>
    <relationshipName>Search_Strategy_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>