bundled_metadata/force-app/main/default/objects/Search_Strategy_Step__c/fields/ReferenceStrategyId__c.field-meta.xml
<CustomField>
    <fullName>ReferenceStrategyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Strategy</label>
    <referenceTo>Search_Strategy__c</referenceTo>
    <relationshipLabel>Search Strategy Steps</relationshipLabel>
    <relationshipName>Search_Strategy_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>