bundled_metadata/force-app/main/default/objects/Search_Strategy_Step__c/fields/Source_Field_2__c.field-meta.xml
<CustomField>
    <fullName>Source_Field_2__c</fullName>
    <label>Source Field 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>