bundled_metadata/force-app/main/default/objects/Search_Strategy_Step__c/fields/Source_Obj_1__c.field-meta.xml
<CustomField>
    <fullName>Source_Obj_1__c</fullName>
    <label>Source Obj 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>