bundled_metadata/force-app/main/default/objects/Search_Strategy_Step__c/fields/Target_Field_3__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_3__c</fullName>
    <label>Target Field 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>